src/App.css
/* ... */
.main-tweet-item-stats {
  margin-top: 15px;
  border-top: 1px solid;
  display: flex;
  gap: 15px;
}

.main-tweet-item-stats a:hover {
  text-decoration: underline;
}

.main-tweet-item-stats .retweets-number,
.main-tweet-item-stats .views-number,
.main-tweet-item-stats .likes-number {
  font-weight: 700;
  color: var(--text);
}

.main-tweet-item-buttons {
  display: flex;
  justify-content: space-between;
  padding: 5px 60px;
  border-top: 1px solid var(--line-color);
  border-bottom: 1px solid var(--line-color);
}

.main-tweet-item-stats {
  padding: 15px 0;
  border-color: var(--line-color);
}

/* tweet page replies */

.reply-input-container {
  display: flex;
  padding: 0 15px 15px 15px;
  align-items: center;
  border-bottom: 1px solid var(--line-color);
}

.reply-input-img-container {
  align-self: flex-start;
}

.reply-input {
  padding: 10px;
  width: 100%;
  font-size: 1.3rem;
  background-color: transparent;
  border: none;
  display: flex;
  align-items: center;
}

.btn-submit-reply {
  padding: 8px;
  width: 120px;
  background: var(--theme-color);
}

/* tweet page likes */

#likes-popup {
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: var(--feed-width);
  height: 600px;
  background-color: var(--background-color);
  border-radius: 15px;
  z-index: 3;
  overflow: hidden;
  overflow-y: scroll;
}

#likes-popup header {
  display: flex;
  gap: 15px;
  align-items: center;
  padding: 15px;
}

#likes-popup .list {
  padding-bottom: 100%;
}

/* headers */

header {
  position: sticky;
  isolation: isolate;
  top: 0;
  z-index: 3;
  background-color: rgba(0, 0, 0, 0.3);
  backdrop-filter: blur(10px);
}

/* home header */

#home header h2 {
  padding: 20px;
  cursor: pointer;
}

/* goback header */

header.goback {
  cursor: pointer;
  width: calc(var(--feed-width) - 2px);
  padding: 0 20px;
}

.goback-text {
  height: var(--goback-header-size);
  display: flex;
  align-items: center;
  font-weight: 700;
  font-size: 1.4rem;
}

.goback-text section {
  display: flex;
  align-items: center;
  gap: 15px;
}

.header-display-name {
  width: calc(var(--feed-width) - 100px);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.header-username {
  font-size: 1rem;
}

/* search header */

header.search {
  padding: 15px;
}

#sidebar > header.search {
  padding: 0;
  margin-bottom: 20px;
}

.search-form {
  display: flex;
}

.search-form input {
  font-size: 1.3rem;
  border-radius: 20px;
  padding: 10px 10px 10px 60px;
  border: 0;
  background-color: rgb(66, 66, 66);
}

.search-form button {
  align-self: center;
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
}

.search-form button[type='submit'] {
  flex-shrink: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  padding: 10px 20px;
  background-color: transparent;
}

.search-form .btn-reset-search {
  right: 25px;
  color: grey;
  background-color: transparent;
  flex-shrink: 0;
  height: 30px;
  width: 30px;
  border-radius: 50%;
  padding: 0;
}

.search-form .btn-reset-search:hover {
  background-color: rgba(255, 0, 0, 0.243);
}

/* profile page */

.profile-large {
  min-height: 410px;
}

.profile-large .user-card {
  display: flex;
  flex-direction: column;
}

.profile-large .top-half {
  background-color: rgb(76, 76, 76);
  height: 205px;
}

.img-backdrop {
  position: relative;
  width: 100%;
  height: 100%;
  background-color: grey;
  overflow: hidden;
}

.img-backdrop img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.profile-large .bottom-half {
  --profile-bottom-half-padding: 15px;
  padding: var(--profile-bottom-half-padding);
  min-height: 205px;
}

.bottom-half .edit {
  position: relative;
  height: 69px;
  display: flex;
  justify-content: flex-end;
  align-items: flex-start;
}

.bottom-half .user-profile-img-container {
  position: absolute;
  --img-size: 135px;
  left: 0;
  top: calc((var(--img-size) * -1 / 2) - var(--profile-bottom-half-padding));
  height: var(--img-size);
  width: var(--img-size);
  border-radius: 20%;
  border: 5px solid var(--background-color);
  overflow: hidden;
}

.user-profile-img-container img {
  width: 100%;
  height: 100%;
  background: var(--background-color);
}

.btn-edit-profile {
  padding: 7px;
  color: var(--background-color);
  background-color: var(--text);
}

.btn-edit-profile:hover {
  background-color: rgb(230, 230, 230);
}

.edit-profile {
  position: fixed;
  height: 550px;
  top: 100px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 4;
  background-color: var(--background-color);
  border-radius: 20px;
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
}

.edit-profile button[type='button'] {
  margin: 0;
}

.btn-cancel-edit {
  border-radius: 50%;
  width: 30px;
  height: 30px;
  color: var(--text);
  background-color: transparent;
}

.btn-cancel-edit:hover {
  background-color: rgba(255, 0, 0, 0.5);
}

.edit-profile .edit-top {
  display: flex;
  align-items: center;
  gap: 20px;
  padding: 18px 15px 15px 15px;
}

.edit-profile .verify-img {
  left: 50%;
}

.edit-images {
  position: relative;
  height: 205px;
  border: 3px solid var(--background-color);
}

.edit-images input {
  width: min-content;
}

.img-overlay {
  filter: brightness(0.75);
}

.img-file-upload {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.change-profile-icon {
  position: relative;
  isolation: isolate;
  display: flex;
  align-items: center;
}

.change-profile-icon .btn-cancel-img {
  position: absolute;
  top: -10px;
  left: -10px;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background-color: rgb(50, 50, 50);
  z-index: 2;
}

.change-profile-icon .btn-cancel-img:hover {
  background-color: rgb(177, 0, 0);
}

.edit-profile .change-profile-icon {
  position: relative;
  top: -65px;
  left: 20px;
  width: min-content;
}
/* ... */

